# web-shell

./: .gitignore  .gitmodules  build-frontend.sh  build-guest-container.sh  build-pty-mngr.sh  build-wasm-terminal.sh  guest.Dockerfile  rebar.config
config/: sys.config.src
frontend_src/: package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.debug.js  webpack.release.js
frontend_src/src/: base_terminal.ts  dom_terminal.ts  errno.ts  index.ts  wasi.ts
frontend_src/types/: asset.d.ts
priv/templates/: index.dtl
pty_mngr_src/: CMakeLists.txt
pty_mngr_src/src/: fatal.cpp  fatal.hpp  main.cpp  unreachable.hpp
src/: pty_manager_server.erl  simple_template.erl  term_socket.erl  web_shell.app.src  web_shell_app.erl  web_shell_sup.erl
wasm_terminal_src/: CMakeLists.txt
wasm_terminal_src/src/: wasm_export.cpp
